@@ -1,5 +1,8 @@
 [b]Version 0.6.0rc3[/b] (not released yet):
 
+(2008-03-06)
+ * Added more help for the subtitle section in preferences.
+
 (2008-03-05)
  * Ignore action restore/hide if system tray icon is not visible. Fixes
    bug #1908229.
